[package]
name = "pt32l007x-hal"
version = "0.1.0"
edition = "2024"
authors = ["Wooden Chair <hua.zheng@embeddedboys.com>"]
description = "Hardware Abstraction Layer for PT32L007x microcontrollers"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0"
defmt-rtt = "1.0"
embedded-hal = "1.0.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
semihosting = "0.1.20"
pt32l007x-pac = { version = "0.1.0", path = "../pt32l007x-pac" }

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
# default is opt-level = '0', but that makes very
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1

# cargo build/run --release
[profile.release]
# default is opt-level = '3', but that makes quite
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1
# Use Link Time Optimisations to further inline things across
# crates
lto = 'fat'
# Leave the debug symbols in (default is no debug info)
debug = 2
